Fixed minor spacing issue in day summary, created initial day detail component

--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,8 @@ body {
 }
 
 .weather-icon {
-  width: 90%;
+  width: 200px;
+  height: 200px;
 }
 
 .temp-summary{
